<resources>
    <string name="app_name">Foodle</string>
    <string name="recepie">Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="nodata">No recipes found? Start Searching.</string>
    <string-array name="type_of_food">
        <item>All</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Snacks</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="age_group">
        <item>All</item>
        <item>Kids</item>
        <item>Adults</item>
        <item>Old People</item>
    </string-array>

    <string name="facebook_app_id">1925102361153571</string>
    <string name="fb_login_protocol_scheme">fb1925102361153571</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="add_review">Add Review</string>
    <string name="skip_text">Skip This</string>
</resources>
